feat(-): 添加学习内容和调整细节
1.修改 QtQuick 版本号
2.整合 book 代码
3.添加动画曲线 模型视图 状态 学习内容

--- a/qml.qrc
+++ b/qml.qrc
@@ -13,6 +13,8 @@
         <file>LayoutLearn.qml</file>
         <file>BaseLearn.qml</file>
         <file>StateLearn.qml</file>
+        <file>Components/ColorCircle.qml</file>
+        <file>ModelViewDelegateLearn.qml</file>
     </qresource>
     <qresource prefix="/Components"/>
 </RCC>
