添加了缩放矩形

--- a/qml.qrc
+++ b/qml.qrc
@@ -16,6 +16,7 @@
         <file>Components/ColorCircle.qml</file>
         <file>ModelViewDelegateLearn.qml</file>
         <file>JsLearn.qml</file>
+        <file>Components/ResizableRectangle.qml</file>
     </qresource>
     <qresource prefix="/Components"/>
 </RCC>
